--- a/zei-li.cabal
+++ b/zei-li.cabal
@@ -24,6 +24,7 @@ test-suite unit-tests
                       , Context
                       , Uplink
                       , TimeTracking
+                      , TimeTrackingSpec
   build-depends:        base >=4.11 && <4.12
                       , aeson
                       , bytestring
@@ -33,6 +34,7 @@ test-suite unit-tests
                       , case-insensitive
                       , directory
                       , time
+                      , regex-posix
                       , hspec
                       , tasty
                       , tasty-hspec
@@ -54,5 +56,6 @@ executable zei
                       , case-insensitive
                       , directory
                       , time
+                      , regex-posix
   hs-source-dirs:       src
   default-language:     Haskell2010
