--- a/zei-li.cabal
+++ b/zei-li.cabal
@@ -17,13 +17,13 @@ cabal-version:       >=1.10
 
 test-suite unit-tests
   type:           exitcode-stdio-1.0
-  main-is:        Main.hs 
-  hs-source-dirs: tests src
+  main-is:        Spec.hs 
+  hs-source-dirs: src tests
   other-modules:        Activities
                       , Context
-                      , Uplink
                       , TimeTracking
                       , TimeTrackingSpec
+                      , Uplink
   build-depends:        base >=4.11 && <4.12
                       , aeson
                       , bytestring
@@ -37,6 +37,31 @@ test-suite unit-tests
                       , hspec
                       , tasty
                       , tasty-hspec
+                      , http-client
+  default-language:     Haskell2010
+
+test-suite integ-tests
+  type:           exitcode-stdio-1.0
+  main-is:        Spec.hs 
+  hs-source-dirs: src integration_tests
+  other-modules:        Activities
+                      , Context
+                      , Uplink
+  build-depends:        base >=4.11 && <4.12
+                      , aeson
+                      , bytestring
+                      , MissingH
+                      , http-conduit
+                      , http-types
+                      , case-insensitive
+                      , directory
+                      , time
+                      , regex-posix
+                      , hspec
+                      , tasty
+                      , tasty-hspec
+                      , http-client
+  default-language:     Haskell2010
 
 executable zei
   main-is:             Main.hs
@@ -55,5 +80,6 @@ executable zei
                       , directory
                       , time
                       , regex-posix
+                      , http-client
   hs-source-dirs:       src
   default-language:     Haskell2010
