refactored integration-tests and decoupled timetracking from system-time-api

--- a/zei-li.cabal
+++ b/zei-li.cabal
@@ -48,6 +48,7 @@ test-suite integ-tests
                       , Context
                       , Uplink
                       , TimeTracking
+                      , Mocks
   build-depends:        base >=4.12 && <4.13
                       , aeson
                       , bytestring
